{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 26,
  "lineage": "1d2634d1-5919-2ce9-42d8-457933d06656",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:866143014755:internet-gateway/igw-0ab9d77bee1e213b0",
            "id": "igw-0ab9d77bee1e213b0",
            "owner_id": "866143014755",
            "tags": {
              "Name": "nginx-main-gw"
            },
            "tags_all": {
              "Name": "nginx-main-gw"
            },
            "vpc_id": "vpc-08bc3ba8fee173e10"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "nginx_network_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:866143014755:network-acl/acl-06bd7d367ebcda5f3",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-06bd7d367ebcda5f3",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "866143014755",
            "subnet_ids": [
              "subnet-010f3024ea1128c97",
              "subnet-0922e6a2f04f7df1b"
            ],
            "tags": {
              "Deployment": "nginx",
              "Name": "nginx"
            },
            "tags_all": {
              "Deployment": "nginx",
              "Name": "nginx"
            },
            "vpc_id": "vpc-08bc3ba8fee173e10"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:866143014755:route-table/rtb-0060a1fc1c3e2348e",
            "id": "rtb-0060a1fc1c3e2348e",
            "owner_id": "866143014755",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ab9d77bee1e213b0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08bc3ba8fee173e10"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040b8c898ab3c1b73",
            "route_table_id": "rtb-0060a1fc1c3e2348e",
            "subnet_id": "subnet-0922e6a2f04f7df1b"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:866143014755:subnet/subnet-010f3024ea1128c97",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.200.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010f3024ea1128c97",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "866143014755",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nginx-private-subnet",
              "Owner": "emin"
            },
            "tags_all": {
              "Name": "nginx-private-subnet",
              "Owner": "emin"
            },
            "vpc_id": "vpc-08bc3ba8fee173e10"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:866143014755:subnet/subnet-0922e6a2f04f7df1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0922e6a2f04f7df1b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "866143014755",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nginx-public-subnet",
              "Owner": "emin"
            },
            "tags_all": {
              "Name": "nginx-public-subnet",
              "Owner": "emin"
            },
            "vpc_id": "vpc-08bc3ba8fee173e10"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:866143014755:vpc/vpc-08bc3ba8fee173e10",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0da89f2e7f3f14140",
            "default_route_table_id": "rtb-019462290e99adae5",
            "default_security_group_id": "sg-0fd7ceec8594845ab",
            "dhcp_options_id": "dopt-7c86bf1b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08bc3ba8fee173e10",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-019462290e99adae5",
            "owner_id": "866143014755",
            "tags": {
              "Name": "emin-vpc",
              "Owner": "emin"
            },
            "tags_all": {
              "Name": "emin-vpc",
              "Owner": "emin"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.linux[0]",
      "mode": "managed",
      "type": "aws_elb",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:866143014755:loadbalancer/nginx-alb",
            "availability_zones": [
              "ap-northeast-1a"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "nginx-alb-1276310099.ap-northeast-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "tcp:80",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "nginx-alb",
            "idle_timeout": 60,
            "instances": [
              "i-0511708b4ecb944b0"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 443,
                "instance_protocol": "https",
                "lb_port": 443,
                "lb_protocol": "https",
                "ssl_certificate_id": "arn:aws:acm:ap-northeast-1:866143014755:certificate/ef9ceb42-d07b-4918-8a46-b7a365e22584"
              },
              {
                "instance_port": 80,
                "instance_protocol": "tcp",
                "lb_port": 80,
                "lb_protocol": "tcp"
              }
            ],
            "name": "nginx-alb",
            "security_groups": [
              "sg-02f2e32439661d0f8"
            ],
            "source_security_group": "866143014755/terraform-20250110104835872700000002",
            "source_security_group_id": "sg-02f2e32439661d0f8",
            "subnets": [
              "subnet-0922e6a2f04f7df1b"
            ],
            "tags": {
              "Name": "nginx.default.dev.emin-test.com"
            },
            "tags_all": {
              "Name": "nginx.default.dev.emin-test.com"
            },
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_acm_certificate.cert",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc",
            "module.linux.aws_security_group.nginx"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.linux[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:866143014755:security-group/sg-02f2e32439661d0f8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02f2e32439661d0f8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20250110104835872700000002",
            "name_prefix": "terraform-",
            "owner_id": "866143014755",
            "revoke_rules_on_delete": false,
            "tags": {
              "Deployment": "nginx",
              "Name": "nginx.default.dev.emin-test.com"
            },
            "tags_all": {
              "Deployment": "nginx",
              "Name": "nginx.default.dev.emin-test.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-08bc3ba8fee173e10"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.linux[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:866143014755:subnet/subnet-0372b6ea00ca23daf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0372b6ea00ca23daf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "866143014755",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Deployment": "nginx",
              "Name": "22222-0"
            },
            "tags_all": {
              "Deployment": "nginx",
              "Name": "22222-0"
            },
            "vpc_id": "vpc-08bc3ba8fee173e10"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "module.linux.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:866143014755:subnet/subnet-09a4fb64a1cb2e213",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a4fb64a1cb2e213",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "866143014755",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Deployment": "nginx",
              "Name": "22222-1"
            },
            "tags_all": {
              "Deployment": "nginx",
              "Name": "22222-1"
            },
            "vpc_id": "vpc-08bc3ba8fee173e10"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "module.linux.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:866143014755:subnet/subnet-046557058cb302359",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046557058cb302359",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "866143014755",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Deployment": "nginx",
              "Name": "22222-2"
            },
            "tags_all": {
              "Deployment": "nginx",
              "Name": "22222-2"
            },
            "vpc_id": "vpc-08bc3ba8fee173e10"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "module.linux.data.aws_availability_zones.available"
          ]
        }
      ]
    }
  ]
}